# ai-file-search

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AI-File-Search.bat  AI-File-Search.command  AI-File-Search.sh  BUILD_LOG.md  CONTRIBUTING.md  QUICK_START.md  README.md  bench_embedding.py  check_emoji_free.py  cli.py  complete_setup.py  debug_db.py  debug_retrieval.py  download_model.py  hello.py  index_backup_1754144931.faiss  index_backup_1754145177.faiss  package.json  pyproject.toml  quick_test.py  run_app.py  run_watcher.py  setup_auto_discovery.py  smart_watcher.py  switch_documents.py  test_components.py  test_integration.py  test_migration.py  test_regression.py  test_results_1756722166.json  test_results_1756722179.json  test_results_1756722220.json  test_results_1756722979.json  test_results_1756723368.json  test_results_1756724857.json  test_simple_rag.py  (+1 more)
.github/: copilot-agent.yml  copilot-instructions.md
config/: confluence.yaml  project_structure.toml
core/: ask.py  config.py  confluence.py  database.py  embedding.py  extract.py  index_manager.py  llm.py  monitoring.py  path_utils.py  user_config.py  utils.py  version.py
daemon/: __init__.py  embedding_adapter.py  file_queue.py  watch.py
design-docs/: README.md
docs/: AI_AGENT_RULES.md  APP_OVERVIEW.md  BUILD_LOG.md  CODE_STYLE_GUIDELINES.md  COMPLETE_USER_GUIDE.md  EMBEDDER_API_SPECIFICATION.md  FILE_WATCHER_GUIDE.md  PLAN_MONDAY_BOT.md  PRD_SLACK_AI_ASSISTANT.md  PRD_v0.4.docx  PROJECT_STRUCTURE.md  README.md  api.md  architecture.md  changelog.md  defects.md  milestones.yml  progress.md  refactoring.md  requirements.md  standards.md  testing.md
installers/: install_linux.sh  install_macos.sh  install_windows.ps1
logs/: watcher_status.json
prompts/: extract_summary.md  retrieval_prompt.md  ui_welcome.md  watcher_config.yaml
sample_docs/: A Christmas Carol in Prose; Being a Ghost Story of Christmas.txt  Alice's Adventures in Wonderland.docx  All that happened in a week.txt  Winnie-the-Pooh.docx  test_file_20250901_111407.txt  test_file_20250901_133455.txt  test_watcher_detection.txt
test_regression_results/: test_results_1756813743.json  test_results_1756818523.json
tests/: bench_llm_performance.py  bench_phi3_performance.py  conftest.py  test_ask.py  test_cli.py  test_complete_system.py  test_components.py  test_config.yaml  test_confluence.py  test_core_config.py  test_core_utils.py  test_embedding.py  test_embedding_watch_integration.py  test_enhanced_adapter.py  test_extract.py  test_faiss_sync.py  test_index_manager.py  test_integration.py  test_llm_integration.py  test_llm_unit.py  test_path_utils.py  test_phi3_integration.py  test_query_performance.py  test_quick.py  test_regression.py  test_simple_rag.py  test_ui.py  test_ui_backend.py  test_ui_components.py  test_watch.py  (+1 more)
(+73 files in other folders)
